# blog-acc-openenclave-sample

./: README.md
SecretCalc/: CMakeLists.txt  SecretCalc.edl  readme.md
SecretCalc/enc/: CMakeLists.txt  enc.c  set-uuidpart.ps1
SecretCalc/host/: CMakeLists.txt  host.c  host.h  main.c
azure/: azuredeploy.json  setup.sh
